--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
 			<div id="course_container">
 				<div class="course_item">
 					<img class="course_img" src="assets/math.jpg">
-					<div class="course_title">Noi Linh Tinh</div>
+					<div class="course_title">Logic Math</div>
 					<div class="course_desc">Toán tư duy cơ bản, xây dựng nền tảng cho việc học kĩ thuật và lập trình bậc đại học</div>
 				</div>
 				<div class="course_item">
