--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 	<meta name="country" content="thanh pho Ho Chi Minh"/>
 	<meta name="viewport" content="width=device-width,initial-scale=1">
 	<link rel="stylesheet" href="css/style.css"/>
+	<script src="js/script.js" defer></script>
 	<title>Dương resume</title>
 </head>
 <body>
